# aiopsframework

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: continuous-evaluation.yml  deploy-appservice.yml  secret-scanning.yml
backend/: __init__.py  config.py  cosmos_client.py  database.py  main.py
backend/api/: __init__.py  ab_testing.py  auth.py  azure_monitor.py  codebase_audit.py  continuous_evaluation.py  cost.py  data_sources.py  endpoint_registry.py  evaluation.py  foundry_evaluation.py  golden_dataset.py  migration_guide.py  migration_pipeline.py  performance.py  prompts.py  rag.py  security.py  shadow_testing.py
backend/models/: __init__.py  cost_record.py  experiment.py  golden_dataset.py  migration_run.py  prompt.py  test_run.py  user.py
backend/schemas/: __init__.py  azure_monitor.py  evaluation.py  experiment.py  golden_dataset.py  migration_pipeline.py  prompt.py  test_run.py
backend/services/: ab_testing.py  auth.py  azure_monitor.py  codebase_audit.py  continuous_evaluation.py  cost_tracker.py  data_sources.py  endpoint_registry.py  evaluation.py  foundry_evaluation.py  golden_dataset.py  migration_guide.py  migration_pipeline.py  model_provider.py  performance.py  prompt_manager.py  quality_gates.py  rag_pipeline.py  security.py  shadow_testing.py
backend/utils/: file_parser.py  metrics.py
datasets/: customer_service_golden_dataset.jsonl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DataSourceImporter.tsx  DeploymentSelect.tsx  EvalRunPicker.tsx  GoldenDatasetPicker.tsx  Layout.tsx  (+4 more)
scripts/: capture-screenshots.mjs
tests/: test_ab_testing.py  test_auth.py  test_cost_tracker.py  test_evaluation.py  test_file_parser.py  test_foundry_evaluation.py  test_performance.py  test_prompt_manager.py  test_rag_pipeline.py  test_security.py
(+39 files in other folders)
