[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genaiops-framework"
version = "0.1.0"
description = "GenAI Ops Framework — A/B testing, prompt management, evaluation, performance, RAG, security, and cost optimization for GenAI workloads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AI Ops Team" }
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    # LLM Providers
    "openai>=1.12.0",
    # Evaluation / NLP
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    # File parsing
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "python-docx>=1.1.0",
    # Async HTTP
    "httpx>=0.27.0",
    # Config
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Caching / queues
    "redis>=5.0.0",
    # Security
    "PyJWT>=2.8.0",
    "passlib>=1.7.4",
    # Monitoring
    "prometheus-client>=0.20.0",
    # Azure SDK (for deployment scanning & metrics)
    "azure-identity>=1.15.0",
    "azure-mgmt-cognitiveservices>=13.5.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-monitor-query>=1.3.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-subscription>=3.0.0",
    "azure-mgmt-loganalytics>=13.0.0",
    # Azure AI Foundry Evaluation SDK
    "azure-ai-evaluation>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
